--- a/indexencore.html
+++ b/indexencore.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/styleindexencore.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <title>yolo</title>
 </head>
 <body>
-    <h1></h1>
+    <h1>Titre de niveau 1</h1>
     <nav class="orange">
         <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href="">Menu : $1</a></li>
+            <li><a href="">Menu : $1</a></li>
+            <li><a href="">Menu : $1</a></li>
+            <li><a href="">Menu : $1</a></li>
+            <li><a href="">Menu : $1</a></li>
         </ul>
     </nav>
-    <h2></h2>
-    <h3></h3>
-    <h4></h4>
-    <h5></h5>
-    <h6></h6>
+    <h2>Titre de niveau 2</h2>
+    <h3>Titre de niveau 3</h3>
+    <h4>Titre de niveau 4</h4>
+    <h5>Titre de niveau 5</h5>
+    <h6>Titre de niveau 6</h6>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis doloremque eos voluptates est. Iure fugit, quisquam doloribus sed accusamus voluptas consequuntur perferendis ut velit eveniet vero dolorem rerum? Dolorem natus quibusdam repudiandae vel dolor in. Praesentium sapiente assumenda autem perferendis corrupti. Tempora et repellat odio amet veniam impedit, ipsa culpa.</p>
     <blockquote class="orange">Lorem ipsum dolor sit amet, <strong>consectetur adipisicing elit.</strong> Odit nobis sed omnis alias ipsum, error facilis id molestiae incidunt esse dicta magni et nesciunt a fugit fuga pariatur distinctio vel illum blanditiis. Voluptatem rem et ipsum quam vitae. Incidunt ipsam minima dolores illum doloribus labore cumque eaque magni voluptatibus veniam.</blockquote>
-    <p>pour savegarder <kbd>CTRL + S</kbd></p>
-    <e>Lorem <em>ipsum dolor sit amet</em> consectetur adipisicing elit. Aliquid nisi delectus consequuntur labore at alias veritatis cum ab molestias tempore tempora aperiam nesciunt quo molestiae error neque quae, porro doloribus sint! Inventore harum vero, dicta libero eos enim porro repellat corporis ipsa totam itaque laborum, quia dolor perspiciatis quas quaerat!</p>
+    <p>pour savegarder <kbd>CTRL + S</kbd></p><p>Lorem <em>ipsum dolor sit amet</em> consectetur adipisicing elit. Aliquid nisi delectus consequuntur labore at alias veritatis cum ab molestias tempore tempora aperiam nesciunt quo molestiae error neque quae, porro doloribus sint! Inventore harum vero, dicta libero eos enim porro repellat corporis ipsa totam itaque laborum, quia dolor perspiciatis quas quaerat!</p>
 </body>
 </html>
